--- a/resources/MQTTsettings.properties
+++ b/resources/MQTTsettings.properties
@@ -1,10 +1,10 @@
 #MQTT Probs
-url=tcp://192.168.42.164:1883
+url=tcp://147.87.46.59:1883
 user=silas
-password=hanswurst
+password=*****
 topic=test
 END_MESSAGE=valar_morghulis
-
+username=Silas
 
 
 
